Bug 302622 - In the list "additional info" one can uncheck "name" so that the file name should not be listed. But this setting is just ignored
Summary: In the list "additional info" one can uncheck "name" so that the file name sh...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.0.95
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 338596 385006 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-27 10:20 UTC by Gandalf Lechner
Modified: 2017-09-24 09:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2012-06-27 10:20:23 UTC
For example for pictures from a digital camera, the file name is often almost meaningless and one would rather like to display tags, ratings, capture time etc. 

Reproducible: Always

Steps to Reproduce:
1. uncheck "name" in additonal info list in customize view
2. look at it
3.
Actual Results:  
file name is shown

Expected Results:  
file name is not shown
Comment 1 Frank Reininghaus 2012-06-27 10:33:18 UTC
Thanks for the bug report! In earlier versions, it was not possible to uncheck "Name". The best solution might be to restore this behaviour.
Comment 2 Gandalf Lechner 2012-06-27 10:41:56 UTC
(In reply to comment #1)
> Thanks for the bug report! In earlier versions, it was not possible to
> uncheck "Name". The best solution might be to restore this behaviour.

I actually liked the idea of being able to hide the file name; for example for images
Comment 3 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:22:18 UTC
Resetting assignee to default as per bug #305719
Comment 4 andreas_k 2014-08-27 11:18:00 UTC
*** Bug 338596 has been marked as a duplicate of this bug. ***
Comment 5 Kai Uwe Broulik 2017-08-25 14:49:15 UTC
Git commit dfbaf21218c7a96dd7b7d1c4275820cd94c920f5 by Kai Uwe Broulik.
Committed on 25/08/2017 at 14:48.
Pushed by broulik into branch 'master'.

[AdditionalInfoDialog] Prevent hiding "text" role

You cannot do this from the menu but the option was there (but ignored) in the "View Properties" dialog.

Differential Revision: https://phabricator.kde.org/D7386

M  +2    -2    src/settings/additionalinfodialog.cpp

https://commits.kde.org/dolphin/dfbaf21218c7a96dd7b7d1c4275820cd94c920f5
Comment 6 Elvis Angelaccio 2017-09-24 09:37:44 UTC
*** Bug 385006 has been marked as a duplicate of this bug. ***