[AdditionalInfoDialog] Prevent hiding "text" role

You cannot do this from the menu but the option was there (but ignored) in the "View Properties" dialog.

BUG: 302622

Differential Revision: https://phabricator.kde.org/D7386